# inclusive-travel-agent

./: .env  .env.example  ARCHITECTURE_DIAGRAM_SPECIFICATION.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_TESTING_GUIDE.md  GOOGLE_AI_STUDIO_FRONTEND_PROMPT.md  PHASE1_ACCESSIBILITY_INTEGRATION.md  PHASE2_SPECIALIZED_AGENTS.md  PHASE3_CLOUD_RUN_DEPLOYMENT.md  PHASE4_AUTOMATION_NOTIFICATION_SYSTEM.md  README.md  USER_PROFILE_SYSTEM_SUMMARY.md  architecture_ascii.txt  architecture_diagram.mmd  cloudbuild.yaml  pyproject.toml  run_integration_test.sh  start_server.py  test_accessibility_phase1.py  test_accessibility_phase2.py  test_accessibility_phase3.py  test_api_only_integration.py  test_complete_integration.py  test_complete_system.py  test_frontend_integration.py  test_phase4_automation_agents.py  test_simple_integration.py  test_user_profile_system.py
deploy/: deploy_cloud_run.py
deployment/: deploy.py
eval/: test_eval.py
eval/data/: inspire.test.json  intrip.test.json  pretrip.test.json
inclusive_travel_agent/: __init__.py  agent.py  main.py  prompt.py
inclusive_travel_agent/models/: __init__.py  user_profile.py
inclusive_travel_agent/services/: __init__.py  context_service.py  user_profile_service.py
inclusive_travel_agent/shared_libraries/: constants.py  types.py
inclusive_travel_agent/sub_agents/accessibility_communication/: __init__.py  agent.py  prompt.py
inclusive_travel_agent/sub_agents/accessibility_research/: agent.py  prompt.py
inclusive_travel_agent/sub_agents/barrier_navigation/: agent.py  prompt.py
inclusive_travel_agent/sub_agents/booking/: agent.py  prompt.py
inclusive_travel_agent/sub_agents/in_trip/: agent.py  tools.py
inclusive_travel_agent/sub_agents/inspiration/: agent.py
inclusive_travel_agent/sub_agents/mobility_preparation/: agent.py
inclusive_travel_agent/sub_agents/notification/: __init__.py  agent.py  prompt.py
inclusive_travel_agent/sub_agents/planning/: agent.py  prompt.py
inclusive_travel_agent/sub_agents/post_trip/: agent.py  prompt.py
inclusive_travel_agent/sub_agents/pre_trip/: __init__.py  agent.py  prompt.py
inclusive_travel_agent/sub_agents/smart_guardrails/: __init__.py  agent.py  prompt.py
inclusive_travel_agent/sub_agents/transit_support/: agent.py  prompt.py
inclusive_travel_agent/sub_agents/web_checkin/: __init__.py  agent.py  prompt.py
inclusive_travel_agent/tools/: email_service.py  memory.py
tests/: mcp_abnb.py  programmatic_example.py
tests/unit/: test_tools.py
travel_concierge/: agent.py  main.py  prompt.py
travel_concierge/profiles/: itinerary_accessible_default.json
travel_concierge/services/: context_service.py  user_profile_service.py
travel_concierge/sub_agents/accessibility_research/: agent.py
travel_concierge/sub_agents/barrier_navigation/: agent.py
travel_concierge/sub_agents/booking/: agent.py
travel_concierge/tools/: accessibility_apis.py  memory.py  search.py
(+11 files in other folders)
